--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,16 +11,20 @@ html{
 }
 
 body{
-    min-width: 560px;
+    min-width: 320px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;   
+    background-color: #f5f5f5;
+    
 }
 #root{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 1100px;
+    background-color: #fff;
 }
 .header{
     margin-top: 8px;
@@ -36,6 +40,7 @@ body{
 }
 
 h1{
+    width: 240px;
     font-size: 32px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #5e5e5e;
@@ -44,63 +49,75 @@ h1{
 .connections-shedule{
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
-    width: 80%;
-    @include for-medium-up{
+    width: 520px;
+    @include for-small-up{
         flex-direction: row;
     }
+    @include for-medium-up{
+        width: 720px;
+    } 
+    @include for-large-up{
+        width: 860px;
+    } 
+  
 }
 
 .connections-container{
     display: flex;
-    @include for-medium-up{
-        flex-direction: column;
-        margin-bottom: 16px;
-    }
+    flex-direction: column;
 }
 
 .connections{
     display: flex;
     flex-direction: column;
+    &__text{
+        width: 280px;
+        margin: 8px;
+    }
     &__container{
         display: flex;
     }
     &__img{
         margin: 8px;
+        border: 1px solid #3eac3e;
         border-radius: 8px;
-        width: 200px;
-        animation: shadow  3s infinite linear;      
+        width: 280px;
+        animation: shadow  3s infinite linear;
+        @include for-small-up{
+            width: 240px;
+        }  
+        @include for-medium-up{
+            width: 280px;
+
+        } 
+        @include for-large-up{
+            position: absolute;
+            top: 16px;
+            left: 5%;
+        } 
+            
     }
 
-    @keyframes shadow {
-        0%{
-            box-shadow: 3px 6px 20px 0px #000000ba;
-        }
-        50%{
-            box-shadow: 3px 6px 20px 0px #00000000;
-        }
-        100%{
-            box-shadow: 3px 6px 20px 0px #000000ba;
-        }
-    }
     &__phone{
         text-align: center;
         text-decoration: none;
-        line-height: 105px;
+        margin-top: 8px;
         font-weight: 700;
         color: #5f5fe9;
-        @include for-medium-up{
-            line-height: 20px;
-        }
     }
-}
-
-hr{
-    width: 85%;
-    margin: 16px;
+    @include for-small-up{
+        width: 260px;
+    }
+    @include for-medium-up{
+        width: 320px;
+    } 
 }
 
 .shedule{
+    width: 280px;
+    margin-top: 16px;
     margin-bottom: 16px;
     padding: 8px;
     display: flex;
@@ -115,8 +132,11 @@ hr{
             font-weight: 700;
     }
     @include for-medium-up{
-        margin-left: 10%;
-    }
+        width: 320px;
+    } 
+    @include for-large-up{
+        width: 450px;
+    } 
 }
 
 .necessary{
@@ -125,18 +145,65 @@ hr{
     border-radius: 8px;
 }
 
-.about{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    &__header{
-         margin-top: 8px; 
-    margin-bottom: 8px;
-    font-weight: 700;
+.adress{
+    width: 240px;
+    @include for-small-up{
+     margin-top: 16px;   
+     width: 480px;
     }
 }
 
+iframe{
+    width: 240px;
+    @include for-small-up{
+        width: 480px;
+    }
+    @include for-medium-up{
+        width: 640px;
+    } 
+    @include for-large-up{
+        width: 800px;
+    } 
+}
+
+hr{
+    width: 300px;
+    margin: 16px;
+    @include for-small-up{
+        width: 520px;
+    }
+    @include for-medium-up{
+        width: 700px;
+    } 
+    @include for-large-up{
+        width: 860px;
+    } 
+}
+
+.about{
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    &__header{
+        width: 240px;
+        margin-top: 8px; 
+        margin-bottom: 8px;
+        font-weight: 700;
+    }
+    @include for-small-up{
+        width: 480px;
+    }
+    @include for-medium-up{
+        width: 640px;
+    } 
+    @include for-large-up{
+        width: 800px;
+    } 
+}
+
 .doctors{
+    display: flex;
+    flex-direction: column;
     margin: 8px;
     margin-bottom: 24px;
     display: flex;
@@ -144,6 +211,9 @@ hr{
     color: #fcfaf3;
     border-radius: 8px;
     box-shadow: 3px 6px 20px 0px #000000ba;
+    @include for-small-up{
+        flex-direction: row;
+    }
 }
 
 .photo{
@@ -156,7 +226,7 @@ hr{
     width: 200px;
     @include for-large-up{
         width: 250px;
-    }
+    } 
     }
     &__text{
         margin: 8px;
@@ -177,10 +247,22 @@ footer{
 }
 
 .footer-img{
-    width: 100px;
+    width: 50px;
 }
 
 .footer-text{
     margin-left: 8px;
     text-decoration: none;
+}
+
+@keyframes shadow {
+    0%{
+        box-shadow: 3px 6px 20px 0px #000000ba;
+    }
+    50%{
+        box-shadow: 3px 6px 20px 0px #00000000;
+    }
+    100%{
+        box-shadow: 3px 6px 20px 0px #000000ba;
+    }
 }
