--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ h1 {
 }
 @media screen and (min-width: 992px) {
   .connections__img {
-    position: absolute;
+    position: fixed;
     top: 16px;
     left: 5%;
   }
@@ -273,7 +273,6 @@ hr {
 
 footer {
   display: flex;
-  width: 80%;
   margin: 16px;
   justify-content: left;
 }
