--- a/styles/index.scss
+++ b/styles/index.scss
@@ -47,6 +47,7 @@ h1{
 }
 
 .connections-shedule{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
